crates/coducktor-tui/src/widgets/snapshots/coducktor_tui__widgets__transcript__tests__transcript_expanded_120x40.snap
---
source: crates/coducktor-tui/src/widgets/transcript.rs
expression: "snapshot_at(true, width, height)"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 120, height: 40 },
    content: [
        "│Add retry logic to the sync job.                                                                                       ",
        "I'll add exponential backoff to sync_job.                                                                               ",
        "▾ Thinking — The job currently retries immediately on failure.                                                          ",
        "  The job currently retries immediately on failure.                                                                     ",
        "  Exponential backoff avoids hammering the upstream API.                                                                ",
        "  Edit src/sync_job.rs                                                                                                  ",
        "▾ Ran cargo test sync_job Run the sync job tests [0]                                                                    ",
        "  running 3 tests                                                                                                       ",
        "  test sync_job::tests::retries_on_failure ... ok                                                                       ",
        "  test result: ok. 3 passed                                                                                             ",
        "⇄ session resumed after usage limit                                                                                     ",
        "▀                                                                                                                       ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐",
        "│                                              image could not be decoded                                              │",
        "│                                                  o  open externally                                                  │",
        "└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
    ],
    styles: [
        x: 0, y: 0, fg: Rgb(61, 66, 74), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 0, fg: Rgb(235, 238, 242), bg: Reset, underline: Reset, modifier: NONE,
        x: 32, y: 1, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 40, y: 1, fg: Rgb(235, 238, 242), bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 2, fg: Rgb(157, 164, 174), bg: Reset, underline: Reset, modifier: NONE,
        x: 13, y: 2, fg: Rgb(157, 164, 174), bg: Reset, underline: Reset, modifier: DIM,
        x: 62, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 3, fg: Rgb(157, 164, 174), bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 4, fg: Rgb(157, 164, 174), bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 5, fg: Rgb(235, 238, 242), bg: Reset, underline: Reset, modifier: BOLD,
        x: 22, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 6, fg: Rgb(157, 164, 174), bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 6, fg: Rgb(235, 238, 242), bg: Reset, underline: Reset, modifier: BOLD,
        x: 25, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 26, y: 6, fg: Rgb(157, 164, 174), bg: Reset, underline: Reset, modifier: NONE,
        x: 48, y: 6, fg: Rgb(120, 205, 135), bg: Reset, underline: Reset, modifier: NONE,
        x: 52, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 7, fg: Rgb(157, 164, 174), bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 8, fg: Rgb(157, 164, 174), bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 9, fg: Rgb(157, 164, 174), bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 10, fg: Rgb(245, 190, 80), bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 11, fg: Rgb(219, 0, 0), bg: Rgb(36, 0, 0), underline: Reset, modifier: NONE,
        x: 1, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 27, fg: Rgb(61, 66, 74), bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 31, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
